--- a/package.json
+++ b/package.json
@@ -143,5 +143,10 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "countries-list": "^2.6.1",
+    "libphonenumber-js": "^1.9.49",
+    "react-native-country-picker-modal": "^2.0.0"
   }
 }
