--- a/example/package.json
+++ b/example/package.json
@@ -3,21 +3,26 @@
   "description": "Example app for react-native-intl-phone-field",
   "version": "0.0.1",
   "private": true,
-  "main": "index",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "expo start",
-    "test": "jest"
+    "start": "react-native start",
+    "test": "jest",
+    "postinstall": "jetify"
   },
   "dependencies": {
     "expo": "^42.0.0",
     "expo-splash-screen": "~0.11.2",
+    "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-unimodules": "~0.14.5",
+    "react-native": "~0.63.4",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
