--- a/package.json
+++ b/package.json
@@ -146,7 +146,6 @@
   },
   "dependencies": {
     "countries-list": "^2.6.1",
-    "libphonenumber-js": "^1.9.49",
-    "react-native-country-picker-modal": "^2.0.0"
+    "libphonenumber-js": "^1.9.49"
   }
 }
